--- a/GoIT/markup/exam/exam2/css/style.css
+++ b/GoIT/markup/exam/exam2/css/style.css
@@ -53,7 +53,7 @@ p {
     max-width: 1400px;
 }
 
-.nav{
+.nav {
     position: relative;
 }
 
@@ -73,12 +73,12 @@ a.navbar-brand {
     padding: 2px 15px !important;
 }
 
-.navbar-inverse .navbar-nav>li>a {
+.navbar-inverse .navbar-nav > li > a {
     color: #fff;
     font-weight: 800;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover {
+.navbar-inverse .navbar-nav > li > a:hover {
     color: #9d9d9d;
 }
 
@@ -93,33 +93,40 @@ a.navbar-brand {
 }
 
 #home:before {
-     content: '';
-     position: absolute;
-     top: 0;
-     right: 0;
-     bottom: 0;
-     left: 0;
-     background-color: rgba(255,255,255,0.2);
- }
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.2);
+}
 
-#home>.in-area {
+#home > .in-area {
     padding: 10px 4% 50px;
 }
 
-#about{
+#about {
     background-color: #000;
     color: #fff;
 }
 
-#about>.in-area, #team>.in-area {
+#about > .in-area, #team > .in-area {
     padding: 10px 10% 50px;
 }
 
-.team-person{
+.team-person {
+    position: relative;
+    top: 0;
     display: inline-block;
-    border: 1px solid #000;                                                             /*remove*/
-    width: 25%;
+    border: 1px solid #000; /*remove*/
+    width: 30%;
     margin: 0 5%;
+}
+
+.team-person > img {
+    max-width: 90%;
+    margin: 5px auto;
 }
 
 #projects {
@@ -153,15 +160,14 @@ a.navbar-brand {
 .projects-item {
     display: inline-block;
     width: 200px;
-    margin: 0 5%;
-    border: 1px solid #fff;                                                             /*remove*/
+    border: 1px solid #fff; /*remove*/
     font-size: 80%;
 }
 
-.projects-item>img {
+.projects-item > img {
     max-width: 190px;
     margin: 5px auto;
-    max-height: 200px;
+    max-height: 230px;
 }
 
 #projects .slider__navigation {
@@ -169,13 +175,12 @@ a.navbar-brand {
     margin: 0 auto;
     width: 200px;
     height: 50px;
-    margin: 0 auto;
 }
 
 #projects .slider__pager {
     margin-top: 3px;
     text-decoration: none;
-    font-size: 40px;
+    font-size: 280%;
 }
 
 #projects .slider__pager_previous {
@@ -196,31 +201,16 @@ a.navbar-brand {
     color: #9da09a;
 }
 
-
-/*div#owl-example {*/
-    /*width: 80%;*/
-    /*position: relative;*/
-    /*margin: 0 auto;*/
-    /*left: 0;*/
-    /*right: 0;*/
-/*}*/
-
-/*.owl-prev, .owl-next {*/
-    /*position: absolute;*/
-    /*bottom: 120px;*/
-/*}*/
-
-/*.owl-prev {*/
-    /*left: -5%;*/
-/*}*/
-
-/*.owl-next {*/
-    /*right: -5%;*/
-/*}*/
-
-/*contacts whight*/
 #contacts .row {
     margin: 0 0 30px;
+}
+
+.contact-data > h3 {
+    margin-bottom: 35px;
+}
+
+.contact-data > p > strong {
+    font-weight: 900;
 }
 
 footer {
@@ -231,19 +221,19 @@ footer {
     color: #fff;
 }
 
-footer>.in-area {
+footer > .in-area {
     padding-top: 30px;
     background-color: #000;
 }
 
 @media (max-width: 767px) {
-    .wrapper{
+    .wrapper {
         font-size: 11px;
     }
 }
 
 @media (max-width: 480px) {
-    .wrapper{
+    .wrapper {
         font-size: 9px;
     }
 }
