--- a/GoIT/markup/exam/exam3/css/game.css
+++ b/GoIT/markup/exam/exam3/css/game.css
@@ -517,3 +517,11 @@
 .game-hit {
     animation: 3s blood linear;
 }
+
+footer {
+    background-color: #fff;
+    height: 100px;
+    text-align: center;
+    line-height: 24px;
+    color: #000;
+}
