--- a/Projects/WordsGame/style.css
+++ b/Projects/WordsGame/style.css
@@ -1109,13 +1109,14 @@
 }*/
 
 body {
-    background-image: url(pics/shutterstock_1117213-words1.jpg);
+    width: 100%;
+    background-image: url('pics/shutterstock_1117213-words.jpg');
     background-size: cover;
 }
 
 .system-mess {
+    color: #ffffff;
     font-style: italic;
-    color: #333;
 }
 
 .system-mess-wrong {
@@ -1125,41 +1126,72 @@ body {
 }
 
 .player-name {
+    color: #888888;
     font-weight: bold;
-    color: #000;
+    letter-spacing: 0.02em;
+    text-shadow: 0 0.3px #fff;
 }
 
+.player-text {
+color: #e0e0e0;
+text-align: center;
+}
 
 .game-wrap {
     margin: auto;
-    max-width: 1000px;
+    max-width: 800px;
+    width: 90%;
 }
 
 .game-header {
+    background: rgba(255, 255, 255, 0.4) none repeat scroll 0 0;
+    border-radius: 5px;
+    left: 0;
+    margin: 0 auto;
+    padding: 5px 0;
+    position: relative;
+    right: 0;
     text-align: center;
+    top: 10px;
+    width: 50%;
 }
 
 .game-chat {
-    border: 1px solid rgb(50, 50, 50);
+    background: rgba(230, 210, 210, 0.7) none repeat scroll 0 0;
+    border: 2px solid rgb(30, 0, 0);
     border-radius: 5px;
-    box-shadow: 2px 2px 5px 2px rgba(50, 50, 50, 0.9);
-    padding: 5px;
+    box-shadow: 0 0 100px 66px rgba(255, 255, 255, 0.8);
     margin: 15px;
+    padding: 8px;
 }
 
 .game-log {
-    background-color: #EFEFEF;
-    min-height: 300px;
+    background-color: #111111;
+    border: 2px solid #000;
+    border-radius: 4px;
     margin-bottom: 5px;
-    border-radius: 5px;
+    min-height: 300px;
+    text-align: center;
 }
 
 .game-word-turn {
     border: 1px solid rgb(100, 100, 100);
     border-radius: 3px;
-    width: 87%;
+    box-shadow: 1px 1px #555555 inset, 0 0 1px 1px #b0b0b0 inset;
+    font-size: 1.2em;
+    width: 85%;
 }
 
 .game-word-send {
+    border-radius: 2px;
+    box-shadow: 0 0 1px 1px #000;
+    font-weight: 800;
+    height: 2em;
+    position: relative;
+    top: -2px;
     width: 11%;
+}
+
+@media (min-width: 640px) {
+
 }
